--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,20 @@
             <version>10.16.1.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Client HTTP pour communication inter-services -->
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- JSON Processing -->
+        <dependency>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>2.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     
     <build>
